<resources>
    <string name="app_name">AndroidBasics</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="module_selection_label">Select Module</string>
    <string name="psr_fragment_label">PSR Upload</string>
    <string name="psr_fragment_status_label">PSR Upload</string>
    <string name="psr_fragment_submission_label">PSR Submitted</string>
    <string name="psr_fragment_merger_label">PSR Merged</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_title_patern">%1$s (%2$s)</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">UPLOAD</string>
    <string name="a_c_number">A/C Number :\u0020 </string>
    <string name="tin">TIN :\u0020 </string>
    <string name="psr_proof_of_submission_of_return_upload">PSR (Proof of Submission of Return) Upload</string>
    <string name="name">Name :\u0020 </string>
    <string name="psr_status">PSR Status :\u0020 </string>
    <string name="psr_upload">PSR Upload</string>
    <string name="form_c">Form C</string>
    <string name="upload_1st_part_of_your_tax_return">Upload 1st part of your tax return</string>
    <string name="camera">Camera</string>
    <string name="media">Media</string>
    <string name="submit">Submit</string>
    <string name="psr_first_part">psr first part</string>
    <string name="upload_2nd_part_of_your_tax_return">Upload 2nd part of your tax return</string>
    <string name="psr_2nd_part">psr 2nd part</string>
    <string name="merged_psr">merged psr</string>
    <string name="psr_uploaded_for_branch_approval">PSR Uploaded for Branch Approval</string>
    <string name="tax_assessment_year">Tax Assessment Year :\u0020</string>
    <string name="psr_upload_date">PSR Upload Date :\u0020</string>
    <string name="psr_will_be_updated_for_your_primary_account_as_well_as_other_link_accounts_in_your_wallet">PSR will be updated for your primary account as well as other link accounts in your wallet.</string>
    <string name="proof_of_submission_of_return">PSR Submitted Successfully</string>
    <string name="todo">TODO</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="done">DONE</string>
    <string name="submission_report_viewer">submission report viewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="declaration_for_remittance_received_from_foreign_ncountry_of_amount_exceeding_usd_10_000_or_equivalent">DECLARATION FOR REMITTANCE RECEIVED FROM FOREIGN\nCOUNTRY OF AMOUNT EXCEEDING USD 10,000 OR EQUIVALENT</string>
</resources>