<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/module_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_view"
        android:elevation="5sp"
        android:padding="20sp"
        android:text="@string/proof_of_submission_of_return"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="@+id/module_name"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/module_name"
        app:layout_constraintTop_toBottomOf="@+id/module_name"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textBranchSubmissionMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="10dp"
        android:padding="10sp"
        android:text="@string/psr_uploaded_for_branch_approval"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="#FF9800"
        app:layout_constraintEnd_toEndOf="@+id/module_name"
        app:layout_constraintStart_toStartOf="@+id/module_name"
        app:layout_constraintTop_toBottomOf="@+id/module_name" />

    <LinearLayout
        android:id="@+id/layout_tin_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textBranchSubmissionMessage"
        app:layout_constraintStart_toStartOf="@+id/textBranchSubmissionMessage"
        app:layout_constraintTop_toBottomOf="@+id/textBranchSubmissionMessage"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:padding="10sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tin"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_tin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_tax_assessment_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layout_tin_number"
        app:layout_constraintStart_toStartOf="@+id/layout_tin_number"
        app:layout_constraintTop_toBottomOf="@+id/layout_tin_number"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:padding="10sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_assessment_year"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_tax_assessment_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_upload_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layout_tax_assessment_year"
        app:layout_constraintStart_toStartOf="@+id/layout_tax_assessment_year"
        app:layout_constraintTop_toBottomOf="@+id/layout_tax_assessment_year"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:padding="10sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psr_upload_date"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_upload_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_psr_effect_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layout_upload_date"
        app:layout_constraintStart_toStartOf="@+id/layout_upload_date"
        app:layout_constraintTop_toBottomOf="@+id/layout_upload_date"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:paddingHorizontal="10sp"
        android:paddingVertical="10sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psr_will_be_updated_for_your_primary_account_as_well_as_other_link_accounts_in_your_wallet"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layout_psr_effect_info"
        app:layout_constraintStart_toStartOf="@+id/layout_psr_effect_info"
        app:layout_constraintTop_toBottomOf="@+id/layout_psr_effect_info"
        android:layout_marginTop="10sp"
        android:padding="10sp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:foreground="?android:attr/selectableItemBackground"
            android:drawableLeft="@android:drawable/stat_sys_download_done"
            android:text="@string/download"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/cardview_default_radius"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_view"
            android:backgroundTint="@color/white"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/share"
            android:elevation="@dimen/cardview_default_radius"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="80sp"
        android:paddingVertical="10sp"
        android:backgroundTint="#009688"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_action_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>