<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical">
    <data>
        <import type="android.view.View"/>
        <variable
            name="psrViewModel"
            type="com.example.psr.psrupload.viewmodels.PSRViewModel"/>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">

    <LinearLayout android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight=".9"
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_1st_part_of_your_tax_return"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <RelativeLayout
                    android:id="@+id/rel_layout_img1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/img_part1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#CFC6C6"
                        android:layout_gravity="center"
                        android:contentDescription="@string/psr_first_part" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <Button
                            android:id="@+id/btn_camera_part1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Select"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_2nd_part_of_your_tax_return"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <RelativeLayout
                    android:id="@+id/rel_layout_img2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/img_part2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#CFC6C6"
                        android:layout_gravity="center"
                        android:contentDescription="@string/psr_2nd_part" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <Button
                            android:id="@+id/btn_camera_part2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Select"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight=".1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingHorizontal="50dp"
                android:text="@string/submit"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</layout>