<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical">
    <data>
        <import type="android.view.View"/>
        <variable
            name="psrViewModel"
            type="com.example.psr.psrupload.viewmodels.PSRViewModel"/>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/layoutLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nikosh"
            android:textSize="18sp"
            android:padding="8dp"
            android:text="Submit Tax Return Slip"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLabel"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:padding="10sp"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nikosh"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_fontSize" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={psrViewModel.accountName}"
            android:fontFamily="@font/nikosh"
            android:textAllCaps="true"
            android:textSize="@dimen/default_fontSize" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_ac_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:padding="10sp"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_c_number"
            android:textAlignment="textStart"
            android:fontFamily="@font/nikosh"
            android:textAllCaps="true"
            android:textSize="@dimen/default_fontSize" />

        <TextView
            android:id="@+id/label_ac_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={psrViewModel.accountNumber}"
            android:fontFamily="@font/nikosh"
            android:textAllCaps="true"
            android:textSize="@dimen/default_fontSize" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_tin_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_ac_number"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:padding="10sp"
        android:backgroundTint="@color/white"
        android:elevation="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tin"
            android:textAlignment="textStart"
            android:fontFamily="@font/nikosh"
            android:textAllCaps="true"
            android:textSize="@dimen/default_fontSize" />

        <TextView
            android:id="@+id/label_tin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={psrViewModel.tinNumber}"
            android:fontFamily="@font/nikosh"
            android:textAllCaps="true"
            android:textSize="@dimen/default_fontSize" />
    </LinearLayout>

    <RelativeLayout
        android:id="@id/layout_tax_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_below="@+id/layout_tin_number">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="20sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/layout_tax_assessment" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/psr_status"
                android:fontFamily="@font/nikosh"
                android:textAllCaps="true"
                android:textSize="@dimen/default_fontSize"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/linearLayout1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_tax_assessment_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/nikosh"
                android:textAllCaps="true"
                android:textSize="@dimen/default_fontSize"/>
        </LinearLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_background_golden"
        android:padding="4dp"
        android:text="@string/upload"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>

</layout>